@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.2"
-#define public MagickPackageVersionAddendum ".020080416"
+#define public MagickPackageVersionAddendum ".020080417"
 #define public MagickPackageReleaseDate "unreleased"
