@@ -25,7 +25,7 @@ typedef struct _Ascii85Info
     offset,
     line_break;
 
-  unsigned char
+  magick_uint8_t
     buffer[10];
 } Ascii85Info;
 
@@ -36,31 +36,31 @@ typedef struct _Ascii85Info
   (or can be changed to be) stream based.
 */
 typedef unsigned int
-  (*WriteByteHook)(Image *, const magick_uint8_t, void *);
+  (*WriteByteHook)(Image *, const magick_uint8_t, void *info);
 
 /*
   Commonly used byte writer hooks.
 */
 extern MagickExport unsigned int 
-  Ascii85WriteByteHook(Image *image, const magick_uint8_t, void *),
-  BlobWriteByteHook(Image *image, const magick_uint8_t, void *);
+  Ascii85WriteByteHook(Image *image, const magick_uint8_t code, void *info),
+  BlobWriteByteHook(Image *image, const magick_uint8_t code, void *info);
 
 /*
   Compress methods.
 */
 extern MagickExport unsigned int
-  HuffmanDecodeImage(Image *),
-  HuffmanEncodeImage(const ImageInfo *,Image *),
-  HuffmanEncode2Image(const ImageInfo *,Image *,WriteByteHook,void*),
-  LZWEncodeImage(Image *,const size_t,unsigned char *),
-  LZWEncode2Image(Image *,const size_t,unsigned char *,WriteByteHook,void*),
-  PackbitsEncodeImage(Image *,const size_t,unsigned char *),
-  PackbitsEncode2Image(Image *,const size_t,unsigned char *,WriteByteHook,void*);
+  HuffmanDecodeImage(Image *image),
+  HuffmanEncodeImage(const ImageInfo *image_info,Image *image),
+  HuffmanEncode2Image(const ImageInfo *image_info,Image *image,WriteByteHook write_byte,void *info),
+  LZWEncodeImage(Image *image,const size_t length,magick_uint8_t *pixels),
+  LZWEncode2Image(Image *image,const size_t length,magick_uint8_t *pixels,WriteByteHook write_byte,void *info),
+  PackbitsEncodeImage(Image *image,const size_t length,magick_uint8_t *pixels),
+  PackbitsEncode2Image(Image *image,const size_t length,magick_uint8_t *pixels,WriteByteHook write_byte,void *info);
 
 extern MagickExport void
-  Ascii85Encode(Image *,const unsigned long),
-  Ascii85Flush(Image *),
-  Ascii85Initialize(Image *);
+  Ascii85Encode(Image *image,const magick_uint8_t code),
+  Ascii85Flush(Image *image),
+  Ascii85Initialize(Image *image);
 
 extern MagickExport const char
   *CompressionTypeToString(const CompressionType compression_type);
