@@ -20,22 +20,49 @@
 
 #define SPINLOCK_DELAY_MILLI_SECS 10
 
-static int
-  spinlock_mutex = 0;
+static long
+  spinlock_mutex = 0L;
 
 /* Wait for spin lock */
-static void _spinlock_wait (int *sl)
+static void _spinlock_wait (long *sl)
 {
-  while (InterlockedCompareExchange (sl, 1, 0) != 0)
+  /*
+    LONG InterlockedCompareExchange(LONG volatile* dest, LONG xchg,
+    LONG compare)
+
+    Performs an atomic compare-and-exchange operation on the specified
+    values. The function compares two specified 32-bit values and
+    exchanges with another 32-bit value based on the outcome of the
+    comparison.
+
+    If you are exchanging pointer values, this function has been
+    superseded by the InterlockedCompareExchangePointer function.
+
+    To operate on 64-bit values, use the InterlockedCompareExchange64
+    function.
+  */
+  while (InterlockedCompareExchange (sl, 1L, 0L) != 0)
   {
     /* slight delay - just in case OS does not giveup CPU */
     Sleep (SPINLOCK_DELAY_MILLI_SECS);
   }
 }
 /* Release spin lock */
-static void _spinlock_release (int *sl)
+static void _spinlock_release (long *sl)
 {
-  InterlockedExchange (sl, 0);
+  /*
+    LONG InterlockedExchange (LONG volatile* dest, LONG val)
+
+    Sets a 32-bit variable to the specified value as an atomic
+    operation.
+
+    To operate on a pointer variable, use the
+    InterlockedExchangePointer function.
+    
+    To operate on a 64-bit variable, use the InterlockedExchange64
+    function.
+  */
+  InterlockedExchange (sl, 0L);
 }
 #define SPINLOCK_WAIT _spinlock_wait(&spinlock_mutex)
 #define SPINLOCK_RELEASE _spinlock_release(&spinlock_mutex)
