@@ -21,9 +21,18 @@
 </tr>
 </table>
 <p>
-2008-04-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+2008-04-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/nt_base.c: Eliminate various annoying warnings noticed
+        under MinGW.<BR>
+  <LI> magick/spinlock.h (_spinlock_release): Use 'long' rather than
+        'int' in order to eliminate warning under MinGW.
+  <LI> magick/semaphore.c (spinlock_wait): Use 'long' rather than 'int'
+        in order to eliminate warning under MinGW.
+  <LI> magick/log.c (LogMagickEventList): Eliminate warning under MinGW.
+  <LI> magick/compress.h: Clean up interface definitions to use
+        magick_uint8_t for unsigned character data.
   <LI> coders/jpeg.c (ReadJPEGImage): Don't use GetPixelCachePresent()
         since it is not DLL-exported.
 
