@@ -6,9 +6,11 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 8  (Solaris x86)">
 	<META NAME="CREATED" CONTENT="20020823;18090800">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20080408;20470900">
+	<META NAME="CHANGED" CONTENT="20080417;10255900">
 	<META NAME="CLASSIFICATION" CONTENT="Description of new features in GraphicsMagick to support the motion picture industry">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, DPX, Cineon, 268M">
+	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
+	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
 	<META NAME="CHANGEDBY" CONTENT="Bob Friesenhahn">
@@ -69,9 +71,10 @@ modern motion picture industry usually shoots on film and then uses a
 machine known as a &ldquo;datacine&rdquo; (e.g. <A HREF="http://www.grassvalley.com/products/film/spirit_4k/" TARGET="_top">Spirit
 4K DataCine</A> or </FONT>Cintel DSX) <FONT FACE="Verdana, Arial, Helvetica, sans-seri">or
 a &ldquo;scanner&rdquo; (e.g. <A HREF="http://www.filmlight.ltd.uk/" TARGET="_top">Northlight
-Scanner</A>) to convert each film image into an individual image
-file. An alternative to this is to use a high definition CCD camera
-such as the <A HREF="http://www.grassvalley.com/products/cameras/viper/" TARGET="_top">Grass
+Scanner</A> or <A HREF="http://www.lasergraphics.com/">Lasergraphics</A>
+Director to convert each film image into an individual image file. An
+alternative to this is to use a high definition CCD camera such as
+the <A HREF="http://www.grassvalley.com/products/cameras/viper/" TARGET="_top">Grass
 Valley Viper</A> or the <A HREF="http://www.dalsa.com/dc/4K_products/origin_main.asp" TARGET="_top">DALSA
 Origin</A> to capture images to uncompressed files directly. A rather
 inferior approach is to use a video high definition compressed format
